--- a/Proyecto1/Proyecto1/plantillas/miplantilla.html
+++ b/Proyecto1/Proyecto1/plantillas/miplantilla.html
@@ -1,5 +1,6 @@
 <html>
     <body style="background-color: white;">
+        {% include "top/barra.html" %}
     <h1>
     Primera plantilla
     </h1>
